<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    
      <EditText
        android:id="@+id/ipBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logBox"
        android:layout_alignRight="@+id/pwdBox"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/adresse_ip_du_serveur"
        android:singleLine="true" />
      
    <EditText
        android:id="@+id/logBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/login"
        android:singleLine="true" />

    <EditText
        android:id="@+id/pwdBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logBox"
        android:layout_below="@+id/logBox"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/cnx" />

    <CheckBox
        android:id="@+id/credentialBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/conserver_les_informations" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ipBox"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
     
        android:text="@string/mobile_app" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="Rev: 0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
