  <ScrollView
      xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	
	    xmlns:tools="http://schemas.android.com/tools"> 
	
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".InfosTicket" >
	
	    
	  
	    <TextView
	        android:id="@+id/infoNumTicket"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="10dp"
	        android:text="@string/informations_du_ticket_n_"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/nomTicket"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/infoNumTicket"
	        android:layout_below="@+id/infoNumTicket"
	        android:layout_marginTop="22dp"
	        android:text="@string/empty"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	         />
	
	    <TextView
	        android:id="@+id/demandeurTicket"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/nomTicket"
	        android:layout_below="@+id/nomTicket"
	        android:layout_marginTop="18dp"
	        android:text="@string/empty"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	    	 />
	
	    <TextView
	        android:id="@+id/dateCreaTicket"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/demandeurTicket"
	        android:layout_below="@+id/demandeurTicket"
	        android:layout_marginTop="18dp"
	        android:text="@string/empty"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	         />
	
	    <TextView
	        android:id="@+id/dateModTicket"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/dateCreaTicket"
	        android:layout_below="@+id/dateCreaTicket"
	        android:layout_marginTop="20dp"
	        android:text="@string/empty"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	         />
	
	    <TextView
	        android:id="@+id/descTicket"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/dateModTicket"
	        android:layout_below="@+id/dateModTicket"
	        android:layout_marginTop="29dp"
	        android:text="@string/empty"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        />
	
	    <Button
	        android:id="@+id/boutonCloture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignRight="@+id/descTicket"
	        android:layout_below="@+id/descTicket"
	        android:layout_marginTop="73dp"
	        android:text="@string/close"
	        />
	
	</RelativeLayout>
</ScrollView> 